src/main/java/syntactic/test/failing/inheritanceFromNoAType.ru
struct A:noAType {
}

start {
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 1 | 10 | Se esperaba tipo pero se encontró ID: noAType |